# scorpio2

./: makefile
applications/abstract/: comp.mk
applications/avb_switch/: avb_switch.c  comp.mk
applications/bcm_rpc/: bcm_rpc_proxy.c  bcm_rpc_util.c  comp.mk  comp1.mk  comp2.mk  loader.c
architecture/abstract/: comp.mk
architecture/chapters/: comp0.mk  comp9.mk
architecture/circq/: comp.mk
architecture/lwq/: comp.mk
architecture/module/: comp.mk
architecture/msgq/: comp.mk
architecture/ptu/: comp.mk
architecture/references/: comp.mk
architecture/utils/: comp.mk
base/: base_rules.mk  comp.mk
base/inc/: base.h  base_kernel_services.h  ee.h  ee_internal.h
base/lib/: ee.c  kernel.h  kernel_common.c  prof_data.h
base/tests/: comp.mk
bootloader/include/: bl_chip_config.h  bl_downloader.h  bl_flash.h  bl_ipc_downloader.h
cpu/arm/: comp.mk
crypto/abstract/: comp.mk
crypto/drivers/spum/tests/qualification/headergen/rust_openssl/: Cargo.toml
crypto/drivers/spum/tests/qualification/headergen/rust_openssl/src/: main.rs
crypto/secutils/: comp.mk
crypto/service/: comp.mk
ethernet/802.1as/: comp.mk
ethernet/abstract/: comp.mk
ethernet/service/: comp.mk
host/drivers/: readme_x86_pcie_utilities_build.txt
host/utils/: Makefile  client.c  comp.mk  comp1.mk  crc.c  hlog.c  server.c
init/abstract/: comp.mk
init/bcm8957x/: comp.mk  comp1.mk  comp2.mk  comp3.mk  comp4.mk  rdb_config_a0.xml
io/abstract/: comp.mk
io/modules/: comp.mk
io/service/: comp.mk
nvm/abstract/: comp.mk
nvm/service/: comp.mk  comp1.mk
system/io/: comp.mk
(+1501 files in other folders)
