[package]
name = "headergen"
version = "0.1.0"
authors = ["Shaik Nazeer Hussain <shaik-nazeer.hussain@broadcom.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
itertools = "0.8.1"
openssl = { version = "0.10", features = ["vendored"] }
